# Projet1-Rustified

./: .gitignore  Cargo.toml  Makefile  README.md  speaker-setup-rectifier.simu  speaker-setup.simu  speaker-setup_backup.simu  tp1-rust.hex
Simulation/: button-diode-setup.simu  button-diode-setup_backup.simu  speaker-setup.simu  speaker-setup_backup.simu
TP1/: Cargo.toml  Makefile
TP1/src/: main.rs
TP2/: Cargo.toml  Makefile  avr-atmega324pa.json
TP2/src/: main.rs
TP3/: Cargo.toml  Makefile
TP4/: Cargo.toml  Makefile
TP4/src/: main.rs
TP5/: Cargo.toml  Makefile  avr-atmega324pa.json
TP6/: Cargo.toml  Makefile
TPTEST/: Cargo.toml  Makefile
TPTEST/src/: main.rs
inf1900-robot-hal/: Cargo.toml  avr-atmega324pa.json
inf1900-robot-hal/.cargo/: config.toml
inf1900-robot-hal/src/: device.rs  lib.rs  music.rs  song.rs
src/: device.rs  main.rs  music.rs
