[package]
name = "tp1-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
panic-halt = "0.2.0"

[dependencies.atmega-hal]
path = "src/avr-hal/mcu/atmega-hal"
features = ["atmega324pa", "device-selected", "rt"]

[dependencies.avr-device]
git = "https://github.com/marcantoinem/avr-device"
rev = "684d9afd63a26ad053a8c93bec959c2128d1c05e"
features = ["atmega324pa", "device-selected", "rt"]
