[package]
name = "tp1-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
panic-abort = "0.3.2"

[dependencies.atmega-hal]
path = "src/avr-hal/mcu/atmega-hal"
features = ["atmega324pa", "device-selected", "rt"]

[dependencies.avr-hal-generic]
path = "src/avr-hal/avr-hal-generic"

[dependencies.avr-device]
git = "https://github.com/marcantoinem/avr-device"
rev = "684d9afd63a26ad053a8c93bec959c2128d1c05e"
features = ["atmega324pa", "device-selected", "rt"]
