[package]
name = "tp5-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 3 # Optimize for size.
lto = true # Really important to boil down abstractions
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = 3 # Optimize for size.
lto = true # Really important to boil down abstractions
codegen-units = 1

[dependencies]
panic-abort = "0.3.2"
vcell = "0.1.3"
ufmt = "0.2.0"

[dependencies.atmega-hal]
git = "https://github.com/marcantoinem/avr-hal"
rev = "b30015b6b05c1bde68277d002bb197f193895998"
features = ["atmega324pa", "device-selected", "rt"]

[dependencies.avr-hal-generic]
git = "https://github.com/marcantoinem/avr-hal"
rev = "b30015b6b05c1bde68277d002bb197f193895998"

[dependencies.avr-device]
git = "https://github.com/marcantoinem/avr-device"
rev = "a6e1e2b8ddc03ed4e35d0bba7a1645762eeff32e"

[dependencies.inf1900-robot-hal]
path = "../inf1900-robot-hal"

