[package]
name = "inf1900-robot-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[dependencies]


[dependencies.atmega-hal]
git = "https://github.com/marcantoinem/avr-hal"
rev = "b30015b6b05c1bde68277d002bb197f193895998"
features = ["atmega324pa", "device-selected", "rt"]

[dependencies.avr-hal-generic]
git = "https://github.com/marcantoinem/avr-hal"
rev = "b30015b6b05c1bde68277d002bb197f193895998"